--- a/css/grid01.css
+++ b/css/grid01.css
@@ -46,9 +46,9 @@
 
 .sc .inner .cover {
     position: absolute;
-    inset: 100% auto auto 0;
+    inset: -30% auto auto 0;
     width: 100%;
-    height: 100%;
+    height: -30%;
 
 
     display: flex;
@@ -58,7 +58,7 @@
     /* background: rgb(0, 0, 255);
     opacity: 0.5; */
     background: #000;
-    opacity: 0.5;
+    opacity: 0.7;
     color: #fff;
     padding: 50px 30px;
     transition: 0.8s;
@@ -68,9 +68,11 @@
 
 .sc .inner .cover .purchase {
     font-size: 50px;
+
     margin: 0 auto;
-    top: 50%;
-    left: 50%;
+    right: 100px;
+
+
     color: #fff;
 }
 
